      elf/elf.h).
  * debian/local/manpages/localedef.1: fix a typo.  (Closes: #310477)
  * debian/local/manpages/iconv.1: fix the indentation (Closes: #316148)
  * debian/local/manpages/iconv.1, debian/local/manpages/localedef.1: change
    sarge into etch.
  * debian/sysdeps/kfreebsd.mk: build the udeb package with -Os on
    kfreebsd-i386 and kfreebsd-amd64.
  * debian/sysdeps/*.mk: build the udeb with -Os on amd64, i386, mips and 
    mipsel, powerpc and sparc.
  * debian/sysdeps/arm.mk: set udeb_MIN_KERNEL_SUPPORTED to 2.4.1, as the
    arm build daemons are still running a 2.4 kernel.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1577 (from
    glibc-bsd).
  * Add debian/patches/powerpc/cvs-gcc41-initfini.diff (fix build with gcc 4.1
    on powerpc) from upstream CVS.
  * debian/sysdeps/i386.mk: add a symlink (/usr)/lib/i386-linux-gnu ->
    (/usr)/lib/i486-linux-gnu.
  * Remove patches/i386/local-sse-oldkernel.diff (we don't support 2.2 kernels
    anymore).

  [ Denis Barbier ]
  * Add patches/all/submitted-new-brf-encoding.diff: Add new BRF encoding
    (ASCII Braille), submitted upstream by Samuel Thibault.
  * Add patches/localedata/locale-zh_TW.diff: Remove <U897F><U5143> from
    dates.  Thanks Dan Jacobson (Closes: #352600)

  [ Clint Adams ]
  * debian/debhelper.in/libc.preinst: use POSIX syntax for kill.
  * debian/control.in/main: bump to Standards-Version 3.7.2.

 -- Denis Barbier <barbier@debian.org>  Mon, 22 May 2006 23:14:52 +0200

glibc (2.3.6-10) unstable; urgency=low

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc.preinst: use the original path if readlink -f
    fails to canonicalize the path.  (Closes: #368116)
  * Add patches/arm/local-softfloat.diff (support for arm softfloat), and
    enable on arm-softfloat only, as it breaks other architectures.  (Closes:
    #358772)
  * debian/rules.d/control.mk: Add arm-softfloat to the architectures list.
  * Do a separate pass for the udeb package, so that it could use different