@@ -20,9 +20,10 @@ endif
 with_headers = --with-headers=$(shell pwd)/debian/include --enable-kernel=$(call xx,MIN_KERNEL_SUPPORTED)
 
 # udeb Config
-#udeb_extra_cflags = -Os
 udeb_MIN_KERNEL_SUPPORTED = 2.6.1
 udeb_add-ons = linuxthreads $(add-ons)
+udeb_extra_cflags = -Os
+udeb_extra_config_options = $(extra_config_options) --without-tls
 
 # NPTL Config
 nptl_add-ons = nptl $(add-ons)
