@@ -1,3 +1,2 @@
 # udeb Config
 udeb_MIN_KERNEL_SUPPORTED = 2.4.1
-udeb_extra_cflags = -Os
