@@ -1,6 +1,5 @@
 # udeb Config
 udeb_MIN_KERNEL_SUPPORTED = 2.4.1
-udeb_extra_cflags = -Os
 
 # NPTL Config
 GLIBC_PASSES += nptl
