@@ -1,6 +1,8 @@
 GLIBC_PASSES += nptl s390x
 DEB_ARCH_REGULAR_PACKAGES += libc6-s390x libc6-dev-s390x
 
+# udeb Config
+udeb_extra_cflags = 
 udeb_MIN_KERNEL_SUPPORTED = 2.4.1
 
 s390x_configure_target = s390x-linux
